<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Computer\'s Turn.</string>
    <string name="turn_player_one">Player One\'s Turn.</string>
    <string name="turn_player_two">Player Two\'s Turn.</string>
    <string name="result_tie">Draw!</string>
    <string name="result_human_wins">You Win!!!</string>
    <string name="result_android_wins">You Lose!!!</string>
    <string name="result_player_one_wins">Player One Wins!</string>
    <string name="result_player_two_wins">Player Two Wins!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="info">Info</string>
    <string name="human">Human:  </string>
    <string name="player_one">Player One:  </string>
    <string name="ties">Ties:  </string>
    <string name="android">Computer:  </string>
    <string name="player_two">Player Two:  </string>
    <string name="contact_heading">Contact Info</string>
    <string name="contact_info">
        <b>Name:</b> Nwanevu Chihurumnanya N.\n
        <b>Email:</b> nwanevunkem.chihurumnanya@gmail.com \n
        <b>Phone:</b> +2347033806789\n
        
    </string>
    <string name="about_heading">About</string>
    <string name="about_info">This app allows you to play a game
        of tic tac toe against the computer. This app allows you to 
        free stress when u are tired of studying and helps in making
         the mind fresh to start reading again. This app
        will keep track and display the result of the games
        at the bottom of the screen. 
    </string>
    <string name="newGame_label">New Game</string>
    <string name="exitGame_label">Exit Game</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
    </string>
    <string name="action_settings">Settings</string>

</resources>
