<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TableLayout
        android:id="@+id/playArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_weight="0">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fOne"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/one"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fTwo"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/two"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fThree"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/three"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp"  />

            <Button
                android:id="@+id/fFour"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/four"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp"  />
            <Button
                android:id="@+id/fFive"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/four"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp"  />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fsix"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/five"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fSeven"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fEight"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/seven"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fNine"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/eight"
                android:textSize="70dp" />
            <Button
                android:id="@+id/fTen"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/nine"
                android:textSize="70dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fEleven"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/ten"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fTwelve"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/eleven"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fThirteen"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/eleven"
                android:textSize="70dp" />
            <Button
                android:id="@+id/fFourteen"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/twelve"
                android:textSize="70dp" />
            <Button
                android:id="@+id/fFifteen"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/eight"
                android:textSize="70dp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fSixteen"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/thirteen"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fSeventeen"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="14"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fEighteen"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/fifteen"
                android:textSize="70dp" />
            <Button
                android:id="@+id/fNineteen"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/sixteen"
                android:textSize="70dp" />
            <Button
                android:id="@+id/fTwenty"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/eight"
                android:textSize="70dp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fTwentyOne"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/one"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fTwentyTwo"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/two"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp" />

            <Button
                android:id="@+id/fTwentyThree"
                android:layout_width="80dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:text="@string/three"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp"  />

            <Button
                android:id="@+id/fTwentyFour"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/four"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="70dp"  />
            <Button
                android:id="@+id/fTwentyFive"
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/eight"
                android:textSize="70dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="6"
            android:text="Tip:"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ScoreBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="SCOREBOARD"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/white"/>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human"
                android:textColor="#0b01dd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/humanCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ties"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tiesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textColor="#ff0000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/androidCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </TableRow>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/white"
            android:layout_marginBottom="12dp"/>
    </TableLayout>

    <Button
        android:id="@+id/NewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:background="#ffffff"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="New Game"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
